--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem 0;
 }
 .wrapper .heart-container .heart {
-  width: 140px;
+  width: 160px;
 }
 .wrapper .heart-container .heart img {
   width: 100%;
 }
 .wrapper .heart-container .date {
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight: 600;
-  margin: 1rem 0;
+}
+.wrapper .heart-container .week {
+  font-size: 1em;
 }
 .wrapper .heart-container .name {
   font-size: 1.2rem;
@@ -43,6 +46,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   margin: 2rem 0;
+  gap: 2rem;
 }
 .wrapper .album-container .img-group {
   width: 90%;
@@ -59,9 +63,6 @@ body {
 .wrapper .album-container .img-group img,
 .wrapper .album-container .img-group video {
   width: 100%;
-}
-.wrapper .album-container .img-group + .img-group {
-  margin-top: 2rem;
 }
 .wrapper footer {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
