--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+// @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import "keyframes";
 
 * {
   margin: 0;
@@ -11,6 +13,8 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+$colorDarkMode: #18191a;
+
 .wrapper {
   width: 100%;
   background-image: linear-gradient(
@@ -18,10 +22,17 @@ body {
     rgb(26, 79, 95),
     rgb(15, 126, 83)
   );
-  padding: 1rem;
+  padding: 1rem 4rem;
   color: #fff;
   overflow-x: hidden;
   position: relative;
+
+  &.dark-mode {
+    background-image: linear-gradient(
+      $colorDarkMode,
+      $colorDarkMode
+    ) !important;
+  }
 
   //   background-image: url("https://i.pinimg.com/originals/92/dc/13/92dc13df1f31754c07becfe13714288c.gif");
   //   background-repeat: no-repeat;
@@ -33,9 +44,53 @@ body {
     right: 1.5rem;
     z-index: 3333;
     cursor: pointer;
+    transform: scale(2);
+    transition: all 0.25s ease-in-out;
+    z-index: 999;
 
     svg {
-      transform: scale(2);
+      &:hover {
+        animation: scrollTop 1.5s infinite;
+      }
+    }
+  }
+
+  .tool {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem 0;
+    right: 0.8rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #fff;
+    padding: 1rem 0.7rem;
+    border-radius: 0.6rem;
+    z-index: 999;
+    transition: all 0.25s ease-in-out;
+
+    &.hidden {
+      right: -1.55rem;
+      cursor: pointer;
+
+      .button {
+        visibility: hidden;
+      }
+    }
+
+    .button {
+      color: #000;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 0 0.3rem;
+
+      & + .button {
+        // border-top: 1px solid rgba($color: #000000, $alpha: 0.2);
+      }
     }
   }
 
@@ -67,6 +122,8 @@ body {
       font-weight: 400;
       padding: 1rem;
       border: 1px solid rgba($color: #ffffff, $alpha: 0.5);
+      border-radius: 0.6rem;
+      text-align: center;
 
       a {
         color: inherit;
@@ -84,17 +141,13 @@ body {
     .img-group {
       width: 100%;
       height: auto;
-      // border: 1px dotted rgba($color: #fff, $alpha: 0.3);
-      // padding: 0.3rem;
       border-radius: 1rem;
       position: relative;
+      transition: all 0.25s ease-in-out;
 
-      // .title {
-      //   text-align: center;
-      //   text-transform: uppercase;
-      //   font-weight: 400;
-      //   margin-bottom: 0.2rem;
-      // }
+      &:hover {
+        transform: scale(1.1);
+      }
 
       .title {
         position: absolute;
@@ -136,18 +189,25 @@ body {
 
       .btn {
         position: absolute;
-        right: 1rem;
-        top: 1rem;
+        right: 1.5rem;
+        top: 1.5rem;
+        transform: scale(2.8);
 
         svg {
-          transform: scale(2.5);
           cursor: pointer;
+          transition: all 0.25s ease-in-out;
+
+          &:hover {
+            fill: rgb(255, 0, 0);
+            transform: rotate(90deg);
+          }
         }
       }
 
       .media {
         img,
         video {
+          animation: modalShow 0.25s linear;
           max-width: 80vw;
           max-height: 80vh;
         }
@@ -170,8 +230,6 @@ body {
 // > 1400px
 @media screen and (min-width: 1400px) {
   .wrapper {
-    padding: 0 4rem;
-
     .album-container {
       grid-template-columns: repeat(4, 1fr);
     }
@@ -181,8 +239,6 @@ body {
 // < 1400px
 @media screen and (max-width: 1400px) {
   .wrapper {
-    padding: 0 3rem;
-
     .album-container {
       grid-template-columns: repeat(3, 1fr);
     }
@@ -201,6 +257,7 @@ body {
 // < 768px
 @media screen and (max-width: 768px) {
   .wrapper {
+    padding: 1rem;
     .scroll-top {
       display: none !important;
     }
