--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @keyframes scrollTop {
   0% {
     transform: translateY(0);
@@ -152,6 +153,17 @@ body {
   object-fit: cover;
   object-position: center;
 }
+.wrapper .album-container .img-group.video svg {
+  position: absolute;
+  cursor: pointer;
+  z-index: 1;
+  color: #d8d8d8;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 20%;
+  height: 20%;
+}
 .wrapper .modal {
   position: fixed;
   height: 100%;
@@ -165,6 +177,7 @@ body {
 }
 .wrapper .modal.full-image {
   visibility: hidden;
+  opacity: 0;
 }
 .wrapper .modal.full-image .btn {
   position: absolute;
@@ -175,11 +188,6 @@ body {
 }
 .wrapper .modal.full-image .btn svg {
   cursor: pointer;
-  transition: all 0.25s ease-in-out;
-}
-.wrapper .modal.full-image .btn svg:hover {
-  fill: red;
-  transform: rotate(90deg);
 }
 .wrapper .modal.full-image .media img,
 .wrapper .modal.full-image .media video {
@@ -188,6 +196,7 @@ body {
   max-width: 80vw;
   max-height: 80vh;
   position: relative;
+  cursor: grab;
 }
 .wrapper .modal.full-image .tools {
   display: flex;
@@ -206,6 +215,10 @@ body {
   align-items: center;
   transform: scale(1.3);
   cursor: pointer;
+}
+.wrapper .modal.full-image .tools .button.disable svg {
+  fill: #9a9a9a;
+  cursor: not-allowed;
 }
 .wrapper footer {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
