--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-// @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import "keyframes";
 
 * {
@@ -168,6 +168,18 @@ $indexModal: 200;
         object-fit: cover;
         object-position: center;
       }
+
+      &.video svg {
+        position: absolute;
+        cursor: pointer;
+        z-index: 1;
+        color: rgb(216, 216, 216);
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 20%;
+        height: 20%;
+      }
     }
   }
 
@@ -184,6 +196,7 @@ $indexModal: 200;
 
     &.full-image {
       visibility: hidden;
+      opacity: 0;
 
       .btn {
         position: absolute;
@@ -194,12 +207,6 @@ $indexModal: 200;
 
         svg {
           cursor: pointer;
-          transition: all 0.25s ease-in-out;
-
-          &:hover {
-            fill: rgb(255, 0, 0);
-            transform: rotate(90deg);
-          }
         }
       }
 
@@ -211,6 +218,7 @@ $indexModal: 200;
           max-width: 80vw;
           max-height: 80vh;
           position: relative;
+          cursor: grab;
         }
       }
 
@@ -231,6 +239,11 @@ $indexModal: 200;
           align-items: center;
           transform: scale(1.3);
           cursor: pointer;
+
+          &.disable svg {
+            fill: #9a9a9a;
+            cursor: not-allowed;
+          }
         }
       }
     }
