--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,6 @@ body {
   position: fixed;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem 0;
   right: 0.8rem;
   top: 50%;
   transform: translateY(-50%);
@@ -69,10 +66,21 @@ body {
   border-radius: 0.6rem;
   z-index: 199;
   transition: all 0.25s ease-in-out;
+  opacity: 1;
 }
 .wrapper .toolbar.hidden {
-  right: -1.55rem;
+  width: 2.5rem;
+  height: 4rem;
+  right: -0.5rem;
+  background-color: rgba(255, 255, 255, 0.3);
   cursor: pointer;
+}
+.wrapper .toolbar.hidden::before {
+  content: "Tools";
+  position: absolute;
+  display: block;
+  transform: rotate(-90deg);
+  right: 5px;
 }
 .wrapper .toolbar.hidden .button {
   visibility: hidden;
@@ -81,9 +89,16 @@ body {
   color: #000;
   cursor: pointer;
   display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 0 0.3rem;
+  padding: 0.7rem 0;
+}
+.wrapper .toolbar .button:first-child {
+  padding-top: 0;
+}
+.wrapper .toolbar .button:last-child {
+  padding-bottom: 0;
+}
+.wrapper .toolbar .button + .button {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 .wrapper .heart-container {
   display: flex;
@@ -107,7 +122,7 @@ body {
 .wrapper .heart-container .name {
   font-size: 1.2rem;
   font-weight: 400;
-  padding: 1rem;
+  padding: 1rem 0.7rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.6rem;
   text-align: center;
@@ -119,7 +134,7 @@ body {
 .wrapper .album-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  margin: 2rem 0;
+  margin: 1rem 0;
   gap: 2.2rem;
 }
 .wrapper .album-container .img-group {
@@ -162,6 +177,26 @@ body {
   transform: translate(-50%, -50%);
   width: 20%;
   height: 20%;
+}
+.wrapper .load-more {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0;
+}
+.wrapper .load-more .btn-load-more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 1rem;
+  gap: 0 0.3rem;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 0.7rem;
+  cursor: pointer;
+  font-size: 1rem;
 }
 .wrapper .modal {
   position: fixed;
@@ -257,25 +292,12 @@ body {
   .wrapper .album-container .img-group:hover {
     transform: none;
   }
-  .wrapper .toolbar {
-    transform: scale(1.4);
-  }
   .wrapper .toolbar.hidden {
     width: 2rem;
-    height: 4rem;
-    right: -0.5rem;
-    background-color: rgba(255, 255, 255, 0.3);
   }
   .wrapper .toolbar.hidden::before {
-    content: "Open";
-    position: absolute;
-    display: block;
-    font-size: 11px;
-    transform: rotate(-90deg);
-    right: 7px;
-  }
-  .wrapper .toolbar.hidden .button {
-    display: none;
+    font-size: 14px;
+    right: 1px;
   }
 }
 
