--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,9 +57,6 @@ $indexModal: 200;
     position: fixed;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem 0;
     right: 0.8rem;
     top: 50%;
     transform: translateY(-50%);
@@ -68,10 +65,22 @@ $indexModal: 200;
     border-radius: 0.6rem;
     z-index: $indexToolBar;
     transition: all 0.25s ease-in-out;
+    opacity: 1;
 
     &.hidden {
-      right: -1.55rem;
+      width: 2.5rem;
+      height: 4rem;
+      right: -0.5rem;
+      background-color: rgba($color: #fff, $alpha: 0.3);
       cursor: pointer;
+
+      &::before {
+        content: "Tools";
+        position: absolute;
+        display: block;
+        transform: rotate(-90deg);
+        right: 5px;
+      }
 
       .button {
         visibility: hidden;
@@ -82,12 +91,18 @@ $indexModal: 200;
       color: #000;
       cursor: pointer;
       display: flex;
-      align-items: center;
-      flex-direction: column;
-      gap: 0 0.3rem;
+      padding: 0.7rem 0;
+
+      &:first-child {
+        padding-top: 0;
+      }
+
+      &:last-child {
+        padding-bottom: 0;
+      }
 
       & + .button {
-        // border-top: 1px solid rgba($color: #000000, $alpha: 0.2);
+        border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
       }
     }
   }
@@ -118,7 +133,7 @@ $indexModal: 200;
     .name {
       font-size: 1.2rem;
       font-weight: 400;
-      padding: 1rem;
+      padding: 1rem 0.7rem;
       border: 1px solid rgba($color: #ffffff, $alpha: 0.5);
       border-radius: 0.6rem;
       text-align: center;
@@ -133,7 +148,7 @@ $indexModal: 200;
   .album-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin: 2rem 0;
+    margin: 1rem 0;
     gap: 2.2rem;
 
     .img-group {
@@ -180,6 +195,28 @@ $indexModal: 200;
         width: 20%;
         height: 20%;
       }
+    }
+  }
+
+  .load-more {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0;
+
+    .btn-load-more {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.7rem 1rem;
+      gap: 0 0.3rem;
+      background-color: #28a745;
+      color: #fff;
+      border: none;
+      outline: none;
+      border-radius: 0.7rem;
+      cursor: pointer;
+      font-size: 1rem;
     }
   }
 
