--- a/css/album.css
+++ b/css/album.css
@@ -52,6 +52,48 @@ body {
   object-fit: cover;
   object-position: center;
 }
+.wrapper .time-line {
+  list-style: none;
+  padding: 2rem 0;
+}
+.wrapper .time-line .time-line-item {
+  display: flex;
+  gap: 0 1rem;
+  height: auto;
+  width: 500px;
+}
+.wrapper .time-line .time-line-item .time {
+  text-align: center;
+}
+.wrapper .time-line .time-line-item .icon {
+  position: relative;
+  width: 1px;
+  background-color: #6f6f6f;
+}
+.wrapper .time-line .time-line-item .icon::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(-50%);
+  width: 15px;
+  height: 15px;
+  background-color: #000;
+  border-radius: 100rem;
+}
+.wrapper .time-line .time-line-item.active {
+  color: blue;
+}
+.wrapper .time-line .time-line-item.active .icon {
+  background-color: blue;
+}
+.wrapper .time-line .time-line-item.active .icon::before {
+  content: "";
+  background-color: blue !important;
+}
+.wrapper .time-line .time-line-item .desc {
+  margin-bottom: 1rem;
+}
 
 @media screen and (min-width: 1199px) {
   .wrapper {
