--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body {
 .wrapper .heart-container .name {
   font-size: 1.2rem;
   font-weight: 400;
-  padding: 1rem 0.7rem;
+  padding: 1rem 0.6rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.6rem;
   text-align: center;
@@ -150,6 +150,9 @@ body {
 .wrapper .album-container .img-group .title {
   position: absolute;
   padding: 0.2rem 0.5rem;
+  text-align: center;
+  min-width: 55%;
+  max-width: 70%;
   z-index: 2;
   bottom: 15px;
   left: 50%;
@@ -286,11 +289,17 @@ body {
   .wrapper .scroll-top {
     display: none;
   }
+  .wrapper .heart-container .name {
+    width: 100%;
+  }
   .wrapper .album-container {
     grid-template-columns: repeat(1, 1fr);
   }
   .wrapper .album-container .img-group:hover {
     transform: none;
+  }
+  .wrapper .toolbar {
+    transform: scale(1.3);
   }
   .wrapper .toolbar.hidden {
     width: 2rem;
