--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -34,6 +34,12 @@
       display: none;
     }
 
+    .heart-container {
+      .name {
+        width: 100%;
+      }
+    }
+
     .album-container {
       grid-template-columns: repeat(1, 1fr);
 
@@ -45,6 +51,8 @@
     }
 
     .toolbar {
+      transform: scale(1.3);
+
       &.hidden {
         width: 2rem;
 
